# darling_syscall_rework

./: CMakeLists.txt  README.md
doc/: motivation.md  xnu_examples.md
include/linux-syscalls/: base.h  linux.h
include/mach/i386/: syscall_sw.h
include/pthread/: tsd_private.h
include/sysnum/: linux-x86_64.h
src/libsystem_kernel/: CMakeLists.txt  stub.c
src/libsystem_kernel/emulation/linux/: CMakeLists.txt  base.h  errno.c  simple.h  syscall.c  syscall.h  syscall_asmbridge.S  syscall_cbridge.c  syscall_cbridge.h  syscall_function.h  syscall_table.c  syscall_table.h  vchroot_userspace.c
src/libsystem_kernel/emulation/linux/bsdthread/: cancelable.h  per_thread_wd.h
src/libsystem_kernel/emulation/linux/linux-syscalls/: linux-syscall.S  linux.c  linux.h
src/libsystem_kernel/emulation/linux/misc/: syscall.c  syscall.h
src/libsystem_kernel/emulation/linux/network/: duct.c  recvfrom.c  recvfrom.h
src/libsystem_kernel/emulation/linux/unistd/: pipe.c  pipe.h  write.c  write.h
src/libsystem_kernel/libsyscall/: CMakeLists.txt
src/libsystem_kernel/libsyscall/bsdsyscalls/: SYS.h  ___pipe.S  ___recvmsg.S  ___syscall.S  _write.S
src/libsystem_kernel/libsyscall/custom/: errno.c
test/: CMakeLists.txt
test/generic_syscall/: asm_out_of_bounds_unix_darling.S  asm_out_of_bounds_unix_darling.s  asm_out_of_bounds_unix_macos.s  fail_out_of_bound_unix_syscall.c
test/indirect_syscall/: fail_sysnum_with_class_identifier.c  successful_recvfrom_and_sendto.c
test/print_temp_regs/: main.s
test/shared/: errno_stub_macos.c  getpid_stub.s  indirect_syscall_macos.s  indirect_syscall_macos_notes.s
test/sys_pipe/: darling_pipe_macos.s  sucessful_run.c
test/sys_write/: darling_write_macos.s  fail_run.c  successful_run.c
